fix(officials): adjust vertical spacing

--- a/src/assets/scss/molecules/_official.scss
+++ b/src/assets/scss/molecules/_official.scss
@@ -12,7 +12,7 @@
 }
 
 .official__footer {
-  padding: 10px 15px;
+  padding: 15px;
 }
 
 .official__badge {
@@ -36,5 +36,5 @@
 
 .official__button {
   margin-top: 10px;
-  margin-bottom: 8px;
+  margin-bottom: 3px;
 }
